--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -11,6 +11,9 @@ bind | split-window -h
 unbind '"'
 bind - split-window -v
 
+unbind f
+bind-key -r f run-shell "tmux neww -n 'sessionizer' ~/.local/bin/tms"
+
 unbind r
 bind r source-file ~/.tmux.conf
 
@@ -31,6 +34,7 @@ bind-key -T copy-mode-vi 'v' send -X begin-selection # start selecting text with
 bind-key -T copy-mode-vi 'y' send -X copy-selection # copy text with "y"
 
 unbind -T copy-mode-vi MouseDragEnd1Pane # don't exit copy mode when dragging with mouse
+
 
 # remove delay for exiting insert mode with ESC in Neovim
 set -sg escape-time 10
