--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -51,4 +51,4 @@ set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for 
 set -g @resurrect-capture-pane-contents 'on'
 set -g @continuum-restore 'on'
 
-
+run '~/.tmux/plugins/tpm/tpm'
